# ggsipu_academics

./: LICENSE  README.md  example.py  pyproject.toml
