[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ggsipu-academics"
version = "0.1.0"
description = "CLI and Python toolkit for GGSIPU academic calculations (SGPA, CGPA, Grades)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mayank Somvanshi"}
]
keywords = ["ggsipu", "sgpa", "cgpa", "education", "cli", "ipu", "grades", "bpit", "adgit", "ggsipu-academics", "msit", "mait", "vips", "gtbit", "usar", "usict", "hmr", "tiips", "bvcoe"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MayankNCodes/ggsipu_academics"
Issues = "https://github.com/MayankNCodes/ggsipu_academics/issues"

[project.scripts]
ggsipu = "ggsipu_academics.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
